// 选择 proto3 语法
syntax="proto3";
// 定义一个包名
package proto.user;

// 定义一个 service 服务，相当于 GO 接口定义
service UserService {
  // 以 rpc 开头，定义未实现的方法名称。 必须要有一个请求 message 和响应 message
  // rpc, returns 都是关键字
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {};
}


// message 相当于一个结构体，里面定义字段属性， 先类型后变量名，然后序列号。
// protoful 编码是通过成员的唯一编号来绑定对应的数据。

// 定义一个请求结构体, 推荐命名法： 方法名+Request
message GetInfoRequest {
  // @inject_tag: binding:"required"
  int32 user_id = 1;
}

// 定义一个响应结构体, 推荐命名法： 方法名+Response
message GetInfoResponse {
  string user_name = 1;
  int32 age = 2;
  string like = 3;
  string sex = 4;
}